# programming-rust-book

./: .gitignore
async-chat/: Cargo.toml
async-chat/src/: lib.rs  utils.rs
async-todo/: Cargo.toml
async-todo/migrations/: 20260324184021_todos_table.sql
async-todo/src/: api.rs  db.rs  error.rs  lib.rs  main.rs  router.rs  todo.rs
gap-buffer-implementation/: Cargo.toml
gap-buffer-implementation/src/: lib.rs
gcd-calculator/: Cargo.toml
gcd-calculator/gcd_cli/: Cargo.toml
gcd-calculator/gcd_cli/src/: main.rs
gcd-calculator/gcd_lib/: Cargo.toml
gcd-calculator/gcd_lib/src/: lib.rs
gcd-calculator/gcd_web/: Cargo.toml
gcd-calculator/gcd_web/src/: main.rs
git-toy/: Cargo.toml  build.rs
git-toy/src/: main.rs
git-toy/src/git/: mod.rs  raw.rs
mandelbrot/: Cargo.toml
mandelbrot/src/: main.rs
my-own-linked-list/: Cargo.toml
my-own-linked-list/src/: main.rs
my-personal-future/: Cargo.toml
my-personal-future/src/: main.rs
quickreplace/src/: main.rs
sandbox/src/: main.rs
